Closed Bug 1732424 Opened 3 years ago Closed 3 years ago

SSL_ERROR_BAD_MAC_ALERT on several sites, mainly Google

Categories

(Firefox :: Security, defect)

Firefox 92
x86_64
Windows 10
defect

Tracking

()

RESOLVED FIXED
95 Branch
Tracking Status
firefox95 --- fixed

People

(Reporter: n.karytianos, Assigned: dragana)

References

Details

Attachments

(3 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:88.0) Gecko/20100101 Firefox/88.0

Steps to reproduce:

Trying to open google.com

Actual results:

No page opens and in the console the error SSL_ERROR_BAD_MAC_ALERT shows up. One has to restart the browser to get it to work.
This happens after working with the browser for a while. Everything works as expected until unexpectedly you try to open google and this occurs.
It exists since v88!

Expected results:

The page should open as expected.

I could not reproduce this issue, tried on the latest Nightly 94.0a1 on Windows 10 x64.

n.karytianos, please see some of the solutions provided here and let us know if this solves your issue or not.

Thanks!

Flags: needinfo?(n.karytianos)
OS: Unspecified → Windows 10
Hardware: Unspecified → x86_64

None of these work. I have tried many more, but it keeps happening. Note that among Edge, Chrome and Firefox on my computer, Firefox is the only browser demonstrating this. It happens randomly.
I have attached what I get in Developer/Network.

Flags: needinfo?(n.karytianos)
Attached image developer-network.jpg

Forgot to mention that this also happens even after:

  1. Disabling all extensions
  2. Creating a new profile

And something else I noticed is that this usually happens only with Google. When trying some other website on another tab, it comes up as expected.

Not sure if it helps any. This happens in firefox only when I move my computer from home to my corporate network.

Any news please? This is a long standing issue that nobody seems able to resolve it there at Mozilla. I am thinking seriously ditching firefox because simply nobody really cares and I cannot work with it any longer.

Assigning to the Security component so that one of our devs could take a look over it, if this is not the right component, please move it to a more appropriate one. Thanks!

QA Whiteboard: qa-not-reproducible
Component: Untriaged → Security

What happens if you set security.tls.enable_0rtt_data to false in about:config?

Flags: needinfo?(n.karytianos)

Dear Dana Keeler,
Thank you so much! With your suggestion I have been working all day without the slightest problem! Nowhere on the internet I could find a working suggestion.

Best regards and many thanks,
Nikos

Flags: needinfo?(n.karytianos)
Status: UNCONFIRMED → RESOLVED
Closed: 3 years ago
Resolution: --- → DUPLICATE

I will reopen this bug and add SSL_ERROR_BAD_MAC_ALERT error to a list of reason to disable 0RTT.

This will be all based on the work done in bug 1718520.

Assignee: nobody → dd.mozilla
Status: RESOLVED → REOPENED
Ever confirmed: true
Resolution: DUPLICATE → ---

The severity field is not set for this bug.
:johannh, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jhofmann)
Pushed by ddamjanovic@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/416a96af1211
Add SSL_ERROR_BAD_MAC_ALERT error as a reason to disable 0RTT on a HTTP/2 or HTTP/1.1 connection. r=necko-reviewers,valentin
Status: REOPENED → RESOLVED
Closed: 3 years ago3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
Flags: needinfo?(mail)
See Also: → 1754746
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: