Bug 1732424 - Add SSL_ERROR_BAD_MAC_ALERT error as a reason to disable 0RTT on a HTTP/2 or HTTP/1.1 connection. r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D127881