netwerk/protocol/http/Http2Session.cpp
@@ -214,8 +214,7 @@ void Http2Session::Shutdown(nsresult aReason) {
     } else if (!mCleanShutdown && (mGoAwayReason != NO_HTTP_ERROR)) {
       CloseStream(stream, NS_ERROR_NET_HTTP2_SENT_GOAWAY);
     } else if (!mCleanShutdown &&
-               (aReason ==
-                psm::GetXPCOMFromNSSError(SSL_ERROR_PROTOCOL_VERSION_ALERT))) {
+               SecurityErrorToBeHandledByTransaction(aReason)) {
       CloseStream(stream, aReason);
     } else {
       CloseStream(stream, NS_ERROR_ABORT);
